# PyPlot

./: .gitignore  LICENSE  pyproject.toml  setup.py
pyplot/: dist.py  plt_setup.py
src/pyplot/: base.py  dist.py
tests/: test_update_figsize.py
