[build-system]
requires = ["setuptools>=58.0.4", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "PyPlot"
version = "0.0.1"
description = "Python Plot Combining Matplotlib and Seaborn"
readme = "README.md"
authors = [{ name = "Jie Yu", email = "yujie.hep@gmail.com" }]
license = { file = "LICENSE" }
 
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = ["Matplotlib", "Seaborn", "PyPlot", "Plot"]
 
dependencies = [ "seaborn", "matplotlib", "numpy"]

requires-python = ">=3.9"


[project.urls]
Homepage = "https://github.com/jieyu11/PyPlot"
Issues = "https://github.com/jieyu11/PyPlot/issues"
